@@ -1,3 +1,7 @@
+2004-05-14  Lassi A. Tuura  <lat@iki.fi>
+
+	* IgProfFileDesc.cc: Implement.
+
 2004-05-13  Lassi A. Tuura  <lat@iki.fi>
 
 	* igprof-analyse: Normalise counters early.
